fix: Align delete link in aside box
Closes gravitee-io/issues#4926

--- a/src/app/pages/application/application-general/application-general.component.css
+++ b/src/app/pages/application/application-general/application-general.component.css
@@ -23,6 +23,7 @@
 
 gv-confirm {
   --gv-confirm--maw: 500px;
+  align-self: center;
 }
 
 gv-identity-picture {
